client/css/index.css
* {
    color: var(--main-text-color);
    background-color: var(--main-app-bg-color);
    font-family: Arial, sans-serif;
    text-wrap: normal;
}


body {
    width: 100vw;
    height: var(--main-app-height);
    margin: 0px;
    padding: 0px;
}


#goofy-server-popup {
    display: none;
    position: fixed;
    top: 50px;
    left: 80px;
    padding: 5px;
    border: 1px solid red;
    z-index: 10;
}

#main-app-container {
    width: calc(100vw - 8px);
    height: calc(var(--main-app-height) - 8px);

    margin: 0px;
    padding: 0px;
    background-color: var(--main-app-bg-color);
}


#main-app-container-settings-bg {
    width: 100%;
    height: 100%;
    position: fixed;
    display: none;

    background-color: rgba(0,0,0,0.6);
    z-index: 10;
}

#main-app-container-settings {
    width: 80%;
    height: 80%;
    position: fixed;
    top: 10%;
    left: 10%;


}

#main-app-container-chat {
    width: 100%;
    height: 100%;
    display: grid;
    border: 1px solid blue;
    margin: 0px;
    padding: 0px;
    background-color: var(--main-app-bg-color);


    transition: 0.35s ease-in-out;

    /*Shouldn't occur*/
    overflow: hidden;
}

#main-sidebar {
    border: 1px solid red;
    background-color: var(--main-sidebar-bg);
    width: var(--main-sidebar-size);

    margin: 0px;
    padding: 0px;
    display: grid;
    grid-template-rows: auto var(--main-sidebar-settings-height);
    grid-template-columns: var(--main-sidebar-size);
    overflow: hidden;

    transition: 0.35s ease-in-out;
}

#main-sidebar-uldiv {
    overflow-y: scroll;
    overflow-x: hidden;
}

#main-sidebar-settings {
    border: 1px solid aqua;
    transition: 0.35s ease-in-out;
}

#main-sidebar-settings * {
    transition: all 0.35s ease-in-out, filter 1ms;
}

/*Hide the scrollbar*/
#main-sidebar-uldiv::-webkit-scrollbar {
    display: none; /* Chrome, Safari, Opera*/
}
#main-sidebar-uldiv {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}

#main-chat-selector {
    border: 1px solid green;
    background-color: var(--main-chat-selector-bg);
    width: calc(var(--main-chat-selector-size) * var(--main-chat-show-selector));

    margin: 0px;
    padding: 0px;
    display: grid;
    grid-template-rows: auto var(--main-chat-selector-settings-height);
    grid-template-columns: var(--main-chat-selector-size);
    overflow: hidden;

    transition: 0.35s ease-in-out;
}

#main-chat-selector-uldiv {
    overflow-y: scroll;
    overflow-x: hidden;
}

#main-chat-selector-settings {
    border: 1px solid sienna;
}

/*Change the scrollbar*/
#main-chat-selector-uldiv::-webkit-scrollbar {
    width: var(--main-chat-selector-scroll-size);
}

/*Change the scrollbar track*/
#main-chat-selector-uldiv::-webkit-scrollbar-track {
    background-color: var(--main-chat-selector-scroll-bg);
}

/*Change the scrollbar thumb*/
#main-chat-selector-uldiv::-webkit-scrollbar-thumb {
    background-color: var(--main-chat-selector-scroll-color);
    border-radius: var(--main-chat-selector-scroll-size);
}

/*Change the scrollbar thumb on hover*/
#main-chat-selector-uldiv::-webkit-scrollbar-thumb:hover {
    background-color: var(--main-chat-selector-scroll-color-hover);
}

#main-chat-content {
    border: 1px solid orange;
    background-color: var(--main-chat-bg);
    width: calc(var(--main-chat-size) * var(--main-chat-chat-shown));

    margin: 0px;
    padding: 0px;
    display: grid;
    grid-template-rows: var(--main-chat-header-height) auto var(--main-chat-input-height);
    grid-template-columns: auto;
    overflow: hidden;
}

#main-chat-content-uldiv {
    overflow-y: scroll;
    overflow-x: hidden;
}

#main-chat-content-uldiv * {
    font-size: var(--main-chat-font-size);
}

#main-chat-content-input {
    border: 1px solid chartreuse;
    display: grid;
    grid-template-columns: var(--main-chat-input-upload-size) auto;
}

#main-chat-content-input-upload {
    border: 1px solid pink;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 3em;
    background-color: var(--main-chat-upload-bg);
}

#main-chat-content-input-upload:hover {
    cursor: pointer;
    background-color: var(--main-chat-upload-hover-bg);
}

#main-chat-content-input-upload:active {
    background-color: var(--main-chat-upload-active-bg);
}

#main-chat-content-input-input {
    width: calc(100% - 5px);
    height: calc(100% - 5px);
}

#main-chat-content-input-input textarea {
    width: calc(100% - 5px);
    height: calc(100% - 5px);
    padding: 5px;
    background-color: var(--main-chat-upload-bg);
    resize: none;
}

#main-chat-content-header {
    border: 1px solid purple;

}

/*Change the scrollbar*/
#main-chat-content-uldiv::-webkit-scrollbar {
    width: var(--main-chat-selector-scroll-size);
}

/*Change the scrollbar track*/
#main-chat-content-uldiv::-webkit-scrollbar-track {
    background-color: var(--main-chat-selector-scroll-bg);
}

/*Change the scrollbar thumb*/
#main-chat-content-uldiv::-webkit-scrollbar-thumb {
    background-color: var(--main-chat-selector-scroll-color);
    border-radius: var(--main-chat-selector-scroll-size);
}

#main-chat-info {
    border: 1px solid yellow;
    background-color: var(--main-chat-info-bg);
    overflow: auto;
    width: calc(100% * var(--main-chat-show-info));
}

/*Change the scrollbar*/
#main-chat-info::-webkit-scrollbar {
    width: var(--main-chat-selector-scroll-size);
}

/*Change the scrollbar track*/
#main-chat-info::-webkit-scrollbar-track {
    background-color: var(--main-chat-selector-scroll-bg);
}

/*Change the scrollbar thumb*/
#main-chat-info::-webkit-scrollbar-thumb {
    background-color: var(--main-chat-selector-scroll-color);
    border-radius: var(--main-chat-selector-scroll-size);
}


.hidden-ul {
    list-style-type: none;
    padding: 0px;
    margin: 0px;
}

.hidden-ul > li {
    padding: 0px;
    margin: 0px;
}



.sidebar-entry {
    /*width: 80%;*/
    width: calc(0.8 * var(--main-sidebar-size));
    height: calc(0.8 * var(--main-sidebar-size));
    padding: 0px;
    margin: var(--main-sidebar-margin-vert) auto var(--main-sidebar-margin-vert) auto;
    display: block;
    border-radius: 30%;
}


.chat-selector-entry {
    width: 90%;
    margin: var(--main-chat-selector-margin-vert) 0px var(--main-chat-selector-margin-vert) 0px;
    padding: var(--main-chat-selector-padding);
    display: block;
}


/*Only Hover*/
.sidebar-entry:hover {
    filter: opacity(0.5) drop-shadow(0 0 0 var(--main-sidebar-hover-color));
}
.sidebar-entry:active {
    filter: opacity(0.8) drop-shadow(0 0 0 var(--main-sidebar-hover-color));
}
.chat-selector-entry:hover {
    color: var(--main-chat-selector-hover-color);
    background-color: var(--main-chat-selector-selected-bg);
}

.chat-selector-entry-not {
    color: var(--main-chat-selector-not-color);
}

/*Only active*/
.sidebar-entry-active {
    filter: opacity(0.5) drop-shadow(0 0 0 var(--main-sidebar-selected-color));
}
.chat-selector-entry-active {
    color: var(--main-chat-selector-selected-color);
}

/*Hover and active*/
.sidebar-entry-active:hover {
    filter: opacity(0.5) drop-shadow(0 0 0 var(--main-sidebar-hover-selected-color));
}
.chat-selector-entry-active:hover {
    color: var(--main-chat-selector-selected-color);
}


.chat-entry {
    margin: var(--main-chat-margin-vert) auto var(--main-chat-margin-vert) auto;
    padding: var(--main-chat-padding);
    width: 90%;
    background-color: #202030;
    overflow: hidden;
    text-wrap: normal;
    word-break: break-word;
    hyphens: auto;
}

.chat-entry * {
    background-color: #202030;
}

.chat-entry h1,
.chat-entry h2,
.chat-entry h3,
.chat-entry h4,
.chat-entry h5,
.chat-entry h6,
.chat-entry p {
    margin: 0.6em 0 0 0;
}

.chat-entry h1 {
    font-size: calc(var(--main-chat-font-size) * 1.4) !important;
}

.chat-entry h2 {
    font-size: calc(var(--main-chat-font-size) * 1.3) !important;
}

.chat-entry h3 {
    font-size: calc(var(--main-chat-font-size) * 1.25) !important;
}

.chat-entry h4 {
    font-size: calc(var(--main-chat-font-size) * 1.20) !important;
}

.chat-entry h5 {
    font-size: calc(var(--main-chat-font-size) * 1.15) !important;
}

.chat-entry h6 {
    font-size: calc(var(--main-chat-font-size) * 1.10) !important;
}

.code * {
    font-family: Consolas;
    background-color: #101020;
}

.code {
    font-family: Consolas;
    background-color: #101020;
    display: inline;
    max-width: 100%;
    overflow: hidden;
    overflow-x: auto;
    text-wrap: normal;
    word-break: break-word;
    hyphens: auto;
    white-space: pre;
}


.chat-entry table,
.chat-entry th,
.chat-entry td {
    border: 1px solid white;
    border-collapse: collapse;
}

.code-block {
    display: block;
}

.code-span {
    display: inline;
}

.chat-entry-reply {
    float: right;
}

#main-chat-content-header {
    padding: 5px;
}

#main-chat-info-header {
    padding: 5px;
}

